[gd_scene load_steps=2 format=3 uid="uid://cpuqvt6wuax23"]

[ext_resource type="Script" path="res://ui/CreateLobby.gd" id="1_lobby"]

[node name="CreateLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Lobby Erstellen"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="LobbyNameLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Lobby Name:"

[node name="LobbyNameInput" type="LineEdit" parent="Panel/VBox"]
layout_mode = 2
placeholder_text = "Meine Lobby"

[node name="MaxPlayersLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Max. Spieler:"

[node name="MaxPlayersSpinBox" type="SpinBox" parent="Panel/VBox"]
layout_mode = 2
min_value = 2.0
max_value = 16.0
value = 8.0

[node name="PasswordLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Passwort (optional):"

[node name="PasswordInput" type="LineEdit" parent="Panel/VBox"]
layout_mode = 2
secret = true
placeholder_text = "Leer lassen für öffentlich"

[node name="UseUPNPCheckbox" type="CheckBox" parent="Panel/VBox"]
layout_mode = 2
button_pressed = true
text = "UPNP verwenden (Internet)"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Lobby Erstellen"

[node name="BackButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Zurück"

[node name="StatusLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = " "
horizontal_alignment = 1

